additional fixed